@@ -1,5 +1,12 @@
 2006-08-19  Benoît Dejean  <benoit@placenet.org>
 
+	* src/memmaps.c: (create_memmapsdata):
+	* src/openfiles.c: (create_openfiles_tree):
+
+	Better column alignment and font family.
+
+2006-08-19  Benoît Dejean  <benoit@placenet.org>
+
 	* src/util.c: (procman_debug):
 	
 	Fixed leak.
